# news_topic_modeling

./: .env.example  .gitignore  README.md  WEB_APP_README.md  docker-compose.yml  pyproject.toml  requirements.txt  web_app.py
api_adapter/: newsapi.py  rss.py
news_topic_model/: cli.py  config.py  contract.py  fetch_news.py  ingest.py  spark-cluster.py  visualize_plotly.py
news_topic_model/adapters/: gdelt.py  newsapi.py
news_topic_model/contract/: policy_event.py
news_topic_model/pipeline/: fetcher.py  persistor.py  producer.py  run.py
news_topic_model/services/: graphrag_service.py
news_topic_model/storage/: seen_store.py
news_topic_model/transport/: asyncio_q.py  base.py
news_topic_model/utils/: dtparse.py  iohelpers.py  lang.py  log_task_status.py  text.py
pipeline/: embedder.py  fetcher.py  persistor.py  producer.py  run.py
src/: .env.example  LICENSE  README.md
src/api_adapter/: newsapi.py
src/pipeline/: embedder.py  producer.py  run.py
src/services/: semantic_search_service.py
src/utils/: feed_config.py  football.py
storage/: storage.py  vector_store.py
tests/: test_football_utils.py  test_rss_adapter.py  test_semantic_search.py  test_web_filters.py
utils/: feed_config.py  football.py  logger.py  urlnorm.py
web/: index.html
web/static/: app.js  style.css
